<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/colorMidGrey"
                android:gravity="center_vertical|start"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/general_information"

                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    app:textAllCaps="true"/>



            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/emp_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittextupdatedesign"
                android:orientation="horizontal"
                android:padding="10dp">


                <Spinner
                    android:id="@+id/customer_employe_type_sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/business_salaried"

                    android:spinnerMode="dropdown"
                    android:theme="@style/ThemeOverlay.AppCompat.Light">


                    <requestFocus />
                </Spinner>

                <!--

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_below="@+id/fragment_brand_tv"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:padding="4dp"
                android:layout_marginRight="35dp"
                android:src="@drawable/bottom_arrow" />
-->

            </LinearLayout>






            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/interested_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittextupdatedesign"
                android:orientation="horizontal"
                android:padding="10dp">


                <Spinner
                    android:id="@+id/fragment_intersted_type_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/residency_passport"
                    android:spinnerMode="dropdown"
                    android:theme="@style/ThemeOverlay.AppCompat.Light">


                    <requestFocus />
                </Spinner>


            </LinearLayout>


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/migrate" />

            <EditText
                android:id="@+id/customer_migrate_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_grey_corners"
                android:hint="Enter plan"
                android:padding="10dp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/investment_budget" />

            <EditText
                android:id="@+id/customer_budget_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_grey_corners"
                android:hint="Enter your investment Budget  "
                android:padding="10dp" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/work_name" />

            <EditText
                android:id="@+id/customer_work_org_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/round_grey_corners"
                android:hint="Enter business or Organization"
                android:padding="10dp" />




            <android.support.design.widget.FloatingActionButton
                android:id="@+id/queryempolyetype"
                app:backgroundTint="@color/colorRed"
                style="@style/RegistrationFAB"
                android:layout_width="wrap_content"
                app:fabSize="normal"


                app:rippleColor="@color/colorRed"
                app:srcCompat="@drawable/ic_arrow" />
            <!--    <Button

                    android:layout_gravity="center"
                    android:id="@+id/gernal_submit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_employee_apply_leave_desc"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginVertical="10dp"

                    android:background="@color/colorGreen"
                    android:gravity="center"
                    android:text="Submit"
                    android:textColor="@color/colorWhite" />-->

        </LinearLayout>



    </ScrollView>

</FrameLayout>